--- a/css/style.css
+++ b/css/style.css
@@ -11048,7 +11048,7 @@ h5,
   }
 }
 .owl-carousel.home-slider .slider-item .slider-text .one-third {
-  width: 70%;
+  width: 60%;
   position: relative;
   height: 750px;
   z-index: -1;
@@ -12174,6 +12174,10 @@ textarea.form-control {
   .ftco-counter .block-18 {
     margin-bottom: 2em;
   }
+
+.ftco-counter {
+  margin-top: -8.6em;
+}
 }
 .ftco-counter .icon {
   width: 60px;
@@ -12724,6 +12728,14 @@ textarea.form-control {
 }
 
 @media (max-width: 991px) {
+  .owl-carousel.home-slider .slider-item {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 600px;
+    position: relative;
+    z-index: 0;
+  }
   .owl-carousel.home-slider .slider-item .slider-text .subheading {
     display: none;
     color: #000000;
