--- a/css/style.css
+++ b/css/style.css
@@ -12731,8 +12731,8 @@ textarea.form-control {
   .owl-carousel.home-slider .slider-item {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
-    height: 600px;
+    /* background-position: center center; */
+    height: 500px;
     position: relative;
     z-index: 0;
   }
