--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,13 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   /* width: 100%;
     height: 100%; */
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
 html {
   scroll-behavior: smooth;
