--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,14 @@
   box-sizing: border-box;
 }
 
-/* html,
+html,
 body {
-  width: 100%;
-    height: 100%;
+  /* width: 100%;
+    height: 100%; */
   margin: 0px;
   padding: 0px;
   overflow-x: scroll;
-} */
+}
 html {
   scroll-behavior: smooth;
   font-family: sans-serif;
