--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
     height: 100%; */
   margin: 0px;
   padding: 0px;
-  overflow-x: scroll;
+  overflow-x: hidden !important;
 }
 html {
   scroll-behavior: smooth;
