--- a/css/style.css
+++ b/css/style.css
@@ -11562,6 +11562,7 @@ h5,
   -webkit-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease;
+    margin-left: 60px;
 }
 .services .icon span {
   font-size: 40px;
@@ -11576,7 +11577,7 @@ h5,
 }
 .services:hover .icon {
   background: #fff;
-  margin-left: 60px;
+
 }
 .services:hover .icon span {
   color: #fe8e40;
@@ -11958,7 +11959,7 @@ textarea.form-control {
 .ftco-footer {
   font-size: 16px;
   background: #232931;
-  padding: 7em 0;
+  padding: 2em 0;
   z-index: 0;
 }
 .ftco-footer .ftco-footer-logo {
@@ -12728,6 +12729,10 @@ textarea.form-control {
   }
 }
 
+.lottie{
+  margin-left: 2rem;
+}
+
 @media (max-width: 991px) {
   .owl-carousel.home-slider .slider-item {
     background-size: cover;
@@ -12746,8 +12751,28 @@ textarea.form-control {
     text-transform: uppercase;
     color: #fe8e40;
   }
-  .services:hover .icon {
-    background: #fff;
+  .services .icon {
+    line-height: 1.3;
+    position: relative;
+    margin-top: -60px;
+    width: 80px;
+    height: 80px;
+    background: #fe8e40;
+    border-radius: 50%;
+    margin-bottom: 15px;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
     margin-left: 100px;
   }
+
+  .lottie{
+    margin-left: 4.5rem;
+  }
+  .lottie1{
+    margin-left: 1.9rem;
+  }
+
 }
